testing the links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="http://localhost:5001/login">Login/signup</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./loginpage">Login/signup</a></li>
                         
                     </ul>
                 </div>
