--- a/views/loginpage.ejs
+++ b/views/loginpage.ejs
@@ -49,7 +49,7 @@
                         </div>
       
                         <a class="small text-muted" href="#!">Forgot password?</a>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="http://localhost:5001/signup"
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="./signuppage.ejs"
                             style="color: #393f81;">Register here</a></p>
                         <a href="#!" class="small text-muted">Terms of use.</a>
                         <a href="#!" class="small text-muted">Privacy policy</a>
@@ -65,4 +65,7 @@
       </section>
 </body>
 <script type="module" src="/login/loginjs.js" ></script>
+
+
+
 </html>
